--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>460</width>
-    <height>240</height>
+    <height>420</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>ADB Wi-Fi Tool</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,1">
+   <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,1,3">
     <item>
      <layout class="QHBoxLayout" name="layout_ip">
       <item>
@@ -40,6 +40,7 @@
       </item>
      </layout>
     </item>
+
     <item>
      <layout class="QHBoxLayout" name="layout_wifi">
       <item>
@@ -68,9 +69,23 @@
       </item>
      </layout>
     </item>
+
     <item>
      <layout class="QHBoxLayout" name="layout_sound"/>
     </item>
+
+    <!-- Добавленный QTextEdit логов -->
+    <item>
+     <widget class="QTextEdit" name="textEdit_log">
+      <property name="readOnly">
+       <bool>true</bool>
+      </property>
+      <property name="placeholderText">
+       <string>Лог работы ADB...</string>
+      </property>
+     </widget>
+    </item>
+
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
@@ -84,6 +99,7 @@
       </property>
      </spacer>
     </item>
+
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
