--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -11,7 +11,11 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>ADB Wi-Fi Tool</string>
+   <string>WiFi Debug Connector</string>
+  </property>
+  <property name="windowIcon">
+   <iconset resource="resource.qrc">
+    <normaloff>:/icons/icons/debug.png</normaloff>:/icons/icons/debug.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout" stretch="0,0,0,1,3">
@@ -40,7 +44,6 @@
       </item>
      </layout>
     </item>
-
     <item>
      <layout class="QHBoxLayout" name="layout_wifi">
       <item>
@@ -69,12 +72,9 @@
       </item>
      </layout>
     </item>
-
     <item>
      <layout class="QHBoxLayout" name="layout_sound"/>
     </item>
-
-    <!-- Добавленный QTextEdit логов -->
     <item>
      <widget class="QTextEdit" name="textEdit_log">
       <property name="readOnly">
@@ -85,11 +85,10 @@
       </property>
      </widget>
     </item>
-
     <item>
      <spacer name="verticalSpacer">
       <property name="orientation">
-       <enum>Qt::Orientation::Vertical</enum>
+       <enum>Qt::Vertical</enum>
       </property>
       <property name="sizeHint" stdset="0">
        <size>
@@ -99,11 +98,12 @@
       </property>
      </spacer>
     </item>
-
    </layout>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
  </widget>
- <resources/>
+ <resources>
+  <include location="resource.qrc"/>
+ </resources>
  <connections/>
 </ui>
